# APEX_LEDGER

./: .gitignore  DOMAIN_NOTES.md  README.md  backfill_run.txt  main.py  pyproject.toml  scaffold.sh
.refinery/: extraction_ledger.jsonl
.refinery/pageindex/: application_proposal.json  balance_sheet_2024.json  income_statement_2024.json
.refinery/profiles/: application_proposal_refined.json  balance_sheet_2024_refined.json  income_statement_2024_refined.json
data/: seed_events.jsonl
documents/COMP-001/: financial_statements.xlsx
documents/COMP-002/: financial_statements.xlsx
documents/COMP-003/: financial_statements.xlsx
documents/COMP-004/: financial_statements.xlsx
documents/COMP-005/: financial_statements.xlsx
documents/COMP-006/: financial_statements.xlsx
documents/COMP-007/: financial_statements.xlsx
documents/COMP-008/: financial_statements.xlsx
documents/COMP-009/: financial_statements.xlsx
documents/COMP-010/: financial_statements.xlsx
documents/COMP-011/: financial_statements.xlsx
documents/COMP-012/: financial_statements.xlsx
documents/COMP-013/: financial_statements.xlsx
documents/COMP-014/: financial_statements.xlsx
documents/COMP-015/: financial_statements.xlsx
documents/COMP-016/: financial_statements.xlsx
documents/COMP-017/: financial_statements.xlsx
documents/COMP-018/: financial_statements.xlsx
ledger/: event_store.py  schema.sql
scripts/: demo_data.json  demo_step1.py  demo_step2.py  demo_step3.py  demo_step4.py  demo_step5.py  run_doc_processing_backfill.py  run_full_pipeline_backfill.py  show_history.py
(+111 files in other folders)
